--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "browser-sync": "^2.18.12",
     "browserify": "^14.4.0",
     "express": "^4.15.3",
+    "guid": "0.0.12",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.30",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
